2014-12-03  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Bump dev version, add Suggests: shiny

	* .travis.yml: Add shiny as Suggests: are needed by R CMD check

	* inst/shiny/DiscountCurve/ui.R: UI part of simple shiny app
	* inst/shiny/DiscountCurve/server.R: Server part of shiny app

	* demo/ShinyDiscountCurves.R: New demo() wrapper for shiny app

2014-12-01  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.4.0
	* DESCRIPTION: Update to note we need QL 1.4.0 or later

	* configure.ac: Mark as 0.4.0, allow for newer g++ versions
	* configure: Rebuilt

2014-11-29  Dirk Eddelbuettel  <edd@debian.org>

	* inst/NEWS.Rd: Expanded reflecting changes since last release

2014-11-27  Dirk Eddelbuettel  <edd@debian.org>

	* inst/NEWS.Rd: Added -- better late than never

	* man/Calendars.Rd: Add documentation for advanceDate

	* man/Schedule.Rd: Add standard reference to QuantLib to the
	details section (which was empty)

2014-11-07  Dirk Eddelbuettel  <edd@debian.org>

	* .travis.yml: Call via travis_wait to allow for potential timeout

	* NAMESPACE: Also export advanceDate()

2014-11-07 Michele Salvadore <michele.salvadore@gmail.com>

	* DESCRIPTION: New minor version
	* NAMESPACE: Export Schedule
	* R/schedule.R: Added Schedule function to expose the QuantLib::Schedule to R
	* man/schedule.Rd: Ditto
	* src/schedule.cpp: Ditto

2014-10-30  Dirk Eddelbuettel  <edd@debian.org>

	* NAMESPACE: Tighten exportPattern for .default as suggested by Bill Dunlap

2014-10-29  Michele Salvadore <michele.salvadore@gmail.com>

	* R/bond.R: Added a price parameter to FixedRateBond to calculate based on clean price
	* src/bonds.cpp: new function wrapping price based calculation
	* man/Bond.Rd: updated documentation and examples
	* man/FixedRateBond.Rd: Ditto
	* tests/RQuantLib.R: Corresponding test update
	* tests/RQuantLib.Rout.save: Ditto

2014-10-27  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: New minor version
