@@ -1,3 +1,7 @@
+2015-02-11  Dirk Eddelbuettel  <edd@debian.org>
+
+	* .travis.yml (install): Switch to using ppa:edd/misc for QuantLib debs
+
 2014-12-03  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION: Bump dev version, add Suggests: shiny
